test external component

--- a/src/pages/test.mdx
+++ b/src/pages/test.mdx
@@ -5,6 +5,9 @@ eleventyNavigation:
   key: MDX Test
 ---
 
+import Callout from '../components/callout'
+
 <div className="container">
     <h1>{props.title}</h1>
+    <Callout>This is a callout component!</Callout>
 </div>
